alignment issue fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,9 +8,9 @@ body {
 /* Header Section & Navigation Bar CSS */
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: #562EFF;
-    column-gap: 12em;
+    column-gap: 2em;
     padding: 30px 10px;
 }
 
@@ -41,10 +41,10 @@ nav {
 /* Header Section & Navigation Bar CSS */
 
 /* Top Player Section CSS */
-.top-player-container,
-.course-container {
-    width: 70%;
-    padding: 30px 10px;
+.container{
+    /* width: 62%; */
+    width: 870px;
+    padding: 10px 10px;
     margin: 40px auto;
     background-color: white;
     border-radius: 5px;
@@ -58,12 +58,12 @@ nav {
 .palyer-section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    margin-left: 3em;
 }
 
 .player-card {
     margin-bottom: 20px;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -73,27 +73,23 @@ nav {
 }
 
 hr {
-    width: 85%;
+    width: 90%;
+    border: 1px solid #D1D1D1;
 }
 
 /* Top Player Section CSS */
 
 /* Top Blog Section CSS */
-.top-blog-container {
-    width: 90%;
-    margin: 0 auto;
-}
-
 .blog-card-section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 1em;
-    column-gap: 3em;
+    column-gap: 6em;
+    padding: 10px 50px;
 }
 
 .blog-card {
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -122,9 +118,10 @@ hr {
 
 /* Latest Course Section CSS */
 .course-card-container {
-    width: 90%;
+    /* width: 90%; */
     margin: 0 auto;
     background-color: white;
+    padding: 10px 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -153,10 +150,6 @@ hr {
     justify-content: space-between;
     align-items: center;
 }
-
-/* .course-rating span {
-    margin-right: 10px;
-} */
 
 .course-hour {
     color: #FF4A60;
